@@ -6,6 +6,8 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+RC-2011-04-12-0: Cleanup:     removed get_processor_id()
+
 RH-2011-04-11-0: Cleanup:     cleanup
 
 RH-2011-04-06-0: Enhancem.    Fedora 14 compilation fix
